Bug 40339 - line style toolbar dropdown list not updated
Summary: line style toolbar dropdown list not updated
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: target:3.6.5 target:4.0.0
Keywords:
: 50580 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-08-24 00:50 UTC by Laurent Balland
Modified: 2012-12-06 17:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Balland 2011-08-24 00:50:28 UTC
Hello,

This is the continuity of OOo issue 99692
http://openoffice.org/bugzilla/show_bug.cgi?id=99692

To reproduce:
- draw a line
- change line style
- unselect line
- select line
=> line style appear to be continuous in tool bar
Other parameter (color, width) are updated but not line style.

From my point of view it seems to be an easy hack.
Comment 1 Jeffrey 2011-08-24 01:14:17 UTC
Confirmed for LibreOffice 3.4  340m1(Build:103) on OpenSuse KDE. When I unselect and re-select line, the line setting returns to invisible. So I changed it to dashed and unselected line, and when I select, line style is "invisible" (line is not invisible, that is what appears in the drop down box) again.
Comment 2 Björn Michaelsen 2011-12-23 12:31:43 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 3 Laurent Balland 2011-12-26 13:45:35 UTC
Hello,

I can confirm with LibO 3.5b2 on WinXP.
Comment 4 Ivan Timofeev (retired) 2012-12-04 14:29:27 UTC
*** Bug 50580 has been marked as a duplicate of this bug. ***
Comment 5 Not Assigned 2012-12-06 14:26:25 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ee1d26740fbd8e9c9d6c1ee7e493f136c25b038c&g=libreoffice-3-6

fdo#40339: line style toolbar dropdown list not updated


It will be available in LibreOffice 3.6.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.