fdo#40339: line style toolbar dropdown list not updated

... because XLineDashItem::GetName returns the so-called "api name"
(from RID_SVXSTR_DASH_DEF_START..RID_SVXSTR_DASH_DEF_END range), while
the listbox is filled with corresponding translated names.

Change-Id: I9edeeee6f6219f2b31fb02c24c70f3fef4f0efcb