svx/source/tbxctrls/linectrl.cxx
@@ -33,6 +33,7 @@
 #include "svx/linectrl.hxx"
 #include <svx/itemwin.hxx>
 #include <svx/dialmgr.hxx>
+#include <svx/unoapi.hxx>
 
 using namespace ::com::sun::star::uno;
 using namespace ::com::sun::star::beans;
@@ -157,7 +158,9 @@ void SvxLineStyleToolBoxControl::Update( const SfxPoolItem* pState )
             {
                 if( pDashItem )
                 {
-                    String aString( pDashItem->GetName() );
+                    String aString;
+                    SvxUnogetInternalNameForItem(
+                        XATTR_LINEDASH, pDashItem->GetName(), aString );
                     pBox->SelectEntry( aString );
                 }
                 else
